# Real-Time-Edge-Detection-Viewer

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/opencvedgedetector/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/opencvedgedetector/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/opencvedgedetector/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
web/: index.html  tsconfig.json
web/src/: main.ts
